--- a/style.css
+++ b/style.css
@@ -35,6 +35,7 @@ header{
 .first-section a:hover{
   background-color: green;
 }
+
 .first-section1{
 margin-left: 20%;
 margin-top: 5%;
@@ -43,6 +44,10 @@ margin-top: 5%;
 .first-section1 img{
     width: 440px;
     height: 414px;
+    transition: 3s;
+}
+.first-section1 img:hover{
+transform: rotate(360deg);
 }
 .header{
     font-weight: 600;
@@ -104,7 +109,7 @@ margin-top: 5%;
 .container3{
     display: flex;
     grid-gap: 70px;
-    
+    padding-bottom: 5%;
 }
 .join{
     border: 2px solid orangered;
@@ -140,4 +145,54 @@ footer{
 .space{
     padding: 10px;
 }
+/* ------Media Queries ------*/
 
+/* Mobile Device */
+@media only screen and (max-width:740px) {
+    .container{
+        display: grid;
+        grid-template-columns: repeat(1,1fr);
+    }
+    .blogs{
+        display: grid;
+        grid-template-columns: repeat(1,1fr);
+    }
+    .container3{
+        display: grid;
+        grid-template-columns: repeat(1,1fr);
+    }
+    footer{
+        background-color: red;
+        padding: 20px;
+        width: 360px;
+       height: 211px;
+    }
+    .icon{
+        color: white;
+        text-align: center;
+    }
+    
+}
+/*------ Tablet Device------- */
+@media only screen and (min-width:640px) and (max-width:1184px) {
+    .container{
+        display: grid;
+        grid-template-columns: repeat(2,1fr);
+    }
+    .blogs{
+        display: grid;
+        grid-template-columns: repeat(2,1fr);
+    }
+    .container3{
+        display: grid;
+        grid-template-columns: repeat(2,1fr);
+    }
+    footer{
+        background-color: red;
+        padding: 20px;
+    }
+    .icon{
+        color: white;
+        text-align: center;
+    }
+}
